@@ -18,7 +18,6 @@
 
 package net.frozenblock.wilderwild.mixin.client.easter;
 
-import com.google.common.collect.ImmutableList;
 import java.util.List;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
@@ -59,7 +58,7 @@ public abstract class StellaWardenModel<T extends Warden> implements WilderWarde
 
     @Inject(method = "<init>", at = @At("TAIL"))
     private void wilderWild$setHeadAndTendrils(ModelPart root, CallbackInfo info) {
-        this.wilderWild$headAndTendrils = ImmutableList.of(this.head, this.leftTendril, this.rightTendril);
+        this.wilderWild$headAndTendrils = List.of(this.head, this.leftTendril, this.rightTendril);
     }
 
     @Override
